# finm_32700

./: .gitignore  README.md
final/: CMakeLists.txt  README.md  brun_client.sh  brun_server.sh  main.cpp  rank.py  run.sh
final/include/core/: order_event.hpp
final/include/indicators/: indicator_base.hpp
final/include/indicators/built_in/: moving_average.hpp
final/include/strategies/: strategy_base.hpp
final/include/strategies/built_in/: ma_cross.hpp
final/src/client/: CMakeLists.txt  client  main.cpp
final/src/core/: order_event.cpp
final/src/data/generators/: gen_sprice.cpp
final/src/server/: CMakeLists.txt  server
hw2/: README.md  hw2  main  main.cpp
hw3/: README.md  main  main.cpp
hw4/: CMakeLists.txt  README.md  const  constexpr_math.cpp  meta  metaprogramming.cpp  run.sh
hw5/: HW5 Report.docx  heap_queue.hpp  main  main.cpp  orderbook.hpp  robinhood_hash.hpp  timeseries.hpp
phase1/: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh  runinfo.sh  test.cpp  test.hpp
phase1/include/: mat_mat_naive.hpp  mat_mat_tiled.hpp  mat_vec_col_major.hpp  mat_vec_row_major.hpp
phase1/src/: mat_mat_naive.cpp  mat_mat_tiled.cpp  mat_mat_transposed.cpp  mat_vec_col_major.cpp  mat_vec_row_major.cpp
phase2/: client  hft_client.cpp  server  strategy.md
phase3/: CMakeLists.txt  MarketSnapshot.cpp  MarketSnapshot.h  README.md  feed_parser.h  main.cpp  order_manager.cpp  order_manager.hpp  price_level.h  run.sh  sample_feed.txt
phase4/: CMakeLists.txt  README.md  run.sh
phase5/: CMakeLists.txt  README.md  main  pymain.ipynb  run.sh
(+28 files in other folders)
